added images folder for better organization

--- a/main.tex
+++ b/main.tex
@@ -11,7 +11,7 @@
 	
 	\section{Consider the Feedback Control System below:}
 	\hspace{1cm}
-	\includegraphics[scale=0.5]{feedback_control_system.png}
+	\includegraphics[scale=0.5]{images/feedback_control_system.png}
 	
 	\section{Formulary:}
 	\begin{enumerate}
@@ -68,7 +68,7 @@
 		% First minipage for the first image
 		\begin{minipage}{0.45\textwidth} % Adjust the width as needed
 			\centering
-			\includegraphics[width=\linewidth]{constraints_ds.png} % Replace with your image file
+			\includegraphics[width=\linewidth]{images/constraints_ds.png} % Replace with your image file
 			\caption{Caption for Image 1}
 			\label{fig:image1}
 		\end{minipage}
@@ -79,7 +79,7 @@
 		% Second minipage for the second image
 		\begin{minipage}{0.45\textwidth} % Adjust the width as needed
 			\centering
-			\includegraphics[width=\linewidth]{constraints_dp.png} % Replace with your image file
+			\includegraphics[width=\linewidth]{images/constraints_dp.png} % Replace with your image file
 			\caption{Caption for Image 2}
 			\label{fig:image2}
 		\end{minipage}
