Renamed formulary, added notes

--- a/AC_Formulary.tex
+++ b/AC_Formulary.tex
@@ -3,7 +3,7 @@
 \usepackage[margin=2cm]{geometry} % Adjust the margins
 \usepackage{amsmath}
 
-\title{MDCS Formulary}
+\title{AC Formulary}
 \author{Gregorio Valenti}
 \date{}
 
@@ -85,7 +85,6 @@
 		\end{minipage}
 	\end{figure}
 	
-\end{document}
-
+	
 
 \end{document}
