Added images for section 5

--- a/AC_Formulary.tex
+++ b/AC_Formulary.tex
@@ -69,7 +69,6 @@
 		\begin{minipage}{0.45\textwidth} % Adjust the width as needed
 			\centering
 			\includegraphics[width=\linewidth]{images/constraints_ds.png} % Replace with your image file
-			\caption{Caption for Image 1}
 			\label{fig:image1}
 		\end{minipage}
 		\hfill % Adds horizontal space between the images
@@ -79,8 +78,8 @@
 		% Second minipage for the second image
 		\begin{minipage}{0.45\textwidth} % Adjust the width as needed
 			\centering
-			\includegraphics[width=\linewidth]{images/constraints_dp.png} % Replace with your image file
-			\caption{Caption for Image 2}
+			\vspace{5pt}
+			\includegraphics[width=1.1\linewidth]{images/constraints_dp.png} % Replace with your image file
 			\label{fig:image2}
 		\end{minipage}
 	\end{figure}
