--- a/Notes.tex
+++ b/Notes.tex
@@ -189,6 +189,27 @@
 		\end{equation}
 	\end{enumerate}
 	
+	\begin{figure}[htbp]
+		\centering
+		% First minipage for the first image
+		\begin{minipage}{0.45\textwidth} % Adjust the width as needed
+			\centering
+			\includegraphics[width=\linewidth]{images/Approximation_W_S.png} % Replace with your image file
+			\label{fig:image1}
+		\end{minipage}
+		\hfill % Adds horizontal space between the images
+		% Vertical line
+		\vrule width 0.5pt % Adjust the width of the line as needed
+		\hfill % Adds horizontal space before the second image
+		% Second minipage for the second image
+		\begin{minipage}{0.45\textwidth} % Adjust the width as needed
+			\centering
+			\vspace{0pt}
+			\includegraphics[width=1.135\linewidth]{images/Approximation_W_T.png} % Replace with your image file
+			\label{fig:image2}
+		\end{minipage}
+	\end{figure}
+	
 	\section{Performance Specification as $\boldsymbol{H_\infty}$ Norm Constraints}
 	\subsection{$\boldsymbol{H_\infty}$ Norm Definition}
 	By defining:
